# inundation-emulator

./: .gitignore  Makefile  README.md  create_emulator.py  load_data.py  predict.py  pyproject.toml  scenario.txt  train.txt
notebooks/: predictions_dtgeo_6pt6.ipynb  predictions_dtgeo_SD_CataniaPTF.ipynb  predictions_dtgeo_deliverable_6pt4.ipynb  sd5-2.ipynb  test_lossfunc_ptfeval.ipynb  test_predictions.ipynb  test_reader.ipynb
src/: data_reader.py  emulator.py  logger_setup.py  plotter.py  simple_mod.py
tests/: readme.md  test_data_reader.py
tests/data/: content.txt  scenarios.txt
