[tool.poetry]
name = "inundation-emulator"
version = "0.1.0"
description = "Site specific emulator for tsunami run-up simulations."
authors = ["Erlend Briseid Storrøsten <erlend.briseid.storrosten@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.18.0"
netcdf4 = "^1.7.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
xarray = "^2025.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
